# netbox-proxbox

./: README.md  pyproject.toml  rq.sh  setup.py
netbox_proxbox/: __init__.py  choices.py  models.py  queue_worker.py  tables.py  template_content.py  urls.py  views.py  worker.py  worker1.py
netbox_proxbox/migrations/: 0004_alter_proxmoxvm_id.py  0005_synctask.py  0006_auto_20220419_1530.py  0007_synctask_data_instance.py  0008_auto_20220503_2238.py  0009_auto_20220706_2033.py  0010_auto_20220722_1502.py  0011_auto_20220725_2058.py  0012_synctask_proxmox_vm.py  0013_auto_20220726_1844.py  0014_auto_20220726_1847.py  0015_alter_synctask_proxmox_vm.py  0016_auto_20220726_2003.py
netbox_proxbox/others/: logger.py
netbox_proxbox/proxbox_api/: plugins_config.py  remove.py  update.py
netbox_proxbox/proxbox_api/create/: dcim.py  extras.py  virtualization.py
netbox_proxbox/proxbox_api/updates/: extras.py  node.py  virtual_machine.py
netbox_proxbox/templates/netbox_proxbox/: proxbox_vm_attach.html  proxmox_vm.html  proxmox_vm_delete.html  proxmox_vm_edit.html  proxmox_vm_full_update.html  proxmox_vm_list.html  virtualmachine_proxmox_fields.html
netbox_proxbox/utils_v2/: cluster.py  device_role.py  device_type.py  extras.py  manufactorer.py  nodes.py  proxbox.py  site.py  util_functions.py  virtualmachine.py
